--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,6 @@
       crossorigin="anonymous"
     ></script>
     <!-------vinculo hoja de estilo css-->
-    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/index.css" />
     <!------fuente Poppins google fonts------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,29 +29,15 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
+    <header>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #37506C;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img
-              id="logo"
-              src="/design/logo-nos-vamos-volando.png"
-              width="60"
-              height="60"
-              alt="logo"
-            />
+            <img id="logo" src="/design/logo-nos-vamos-volando.png" width="60" height="60" alt="logo"/>
           </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarsExample04"
-            aria-controls="navbarsExample04"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
           <div class="collapse navbar-collapse" id="navbarsExample04">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
@@ -68,7 +53,7 @@
                 <a class="nav-link" href="#">Traslados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="register.html">Iniciar Sesión</a>
+                    <a class="nav-link" href="session.html">Iniciar Sesión</a>
                 </li>
                 <li class="nav-item">
                     <i class="fas fa-headphones-alt"></i>
@@ -81,29 +66,22 @@
           </div>
         </div>
       </nav>
-        <img
-        class="img-navbar"
-        src="/design/jeshoots-com-mSESwdMZr-A-unsplash.jpg"
-        alt="image-airport"
-        width="100%"
-        height="100%"
-      /> 
+        <img class="img-navbar" src="/design/jeshoots-com-mSESwdMZr-A-unsplash.jpg" alt="image-airport" width="100%" height="100%"/> 
     </header>
     <main>
       <section class = "main">
     <!--------------Titulo Destacados--------------------->
     <div class="row title">
       <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-12">
-        <hr />
+        <hr/>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
         <h3>Destacados</h3>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-12">
-        <hr />
+        <hr/>
       </div>
     </div>
-
     <section class="destacados">
       <article class="producto">
           <img
@@ -243,7 +221,7 @@
     </section>
   </main>
         <!--------------Redes Sociales--------------------->
-        <section id="redes-sociales" class="hidden-xs">
+        <section class="hidden-xs">
             <div class="container">
                 <ul class="list-unstyled list-inline">
                     <li>
@@ -284,7 +262,7 @@
                     </a> 
                 </div> 
             </div>
-            <p> &copy;Digital House 2022 | Powered and designed by Group 10 Desarrollo Full Stack </p>
+            <p class="copyright"> &copy;Digital House 2022 | Powered and designed by Group 10 Desarrollo Full Stack </p>
         </footer>
    
     
