modificacion logo, se agrega favicon,se actualiza navbar y footer en productCart, productDetail y login

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,3 +73,12 @@ a{
         color: #888;
     }
     
+
+    .navbar-brand{
+        background-color: white;
+        border-radius: 30px;
+    } 
+
+    #logo{
+        width: 95%;
+    }
