--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="En Nos Vamos Volando las mejores ofertas de paquetes turísticos, alquiler de autos y cruceros. Reserva ahora con el mejor precio y servicio"
-    />
+    <meta name="description"content="En Nos Vamos Volando las mejores ofertas de paquetes turísticos, alquiler de autos y cruceros. Reserva ahora con el mejor precio y servicio"/>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css"/>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <title>Nos Vamos Volando</title>
+     <link rel= 'icon' type="image/x-icon" href="/design/android-chrome-192x192.png">
+     <meta name="keywords" content="viajes,vuelos,agencia,viaje,destinos,paquetes,turismo,avion,pasajes,vacaciones"/>
     <!-------vinculo hoja de estilo normalize-->
     <link rel="stylesheet" href="/css/normalize.css" />
     <!-- Iconos -->
@@ -33,7 +32,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #37506C;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img id="logo" src="/design/logo-nos-vamos-volando.png" width="60" height="60" alt="logo"/>
+            <img id="logo" src="/design/Logo_volando.png" width="50" height="50" alt="logo"/>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -221,49 +220,49 @@
     </section>
   </main>
         <!--------------Redes Sociales--------------------->
-        <section class="hidden-xs">
-            <div class="container">
-                <ul class="list-unstyled list-inline">
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="https://es-la.facebook.com/" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="https://www.twitter.com/" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="https://www.linkedin.com/" target="_blank">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <footer>
-            <div class="eva-3-row footer-logos-container -eva-3-hide-small -fluid -no-gutter" style="display:flex;"> 
-                <div class="footer-logo-item"> 
-                    <img src="/design/descarga4.webp" alt="Iata" title="Iata" class="footer-image-item">
-                </div> 
-                <div class="footer-logo-item"> 
-                    <a href="http://www.jus.gov.ar/datos-personales.aspx/" target="_blank" rel="nofollow noopener"> 
+    <section class="hidden-xs">
+        <div class="container">
+            <ul class="list-unstyled list-inline">
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://es-la.facebook.com/" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <div class="eva-3-row footer-logos-container -eva-3-hide-small -fluid -no-gutter" style="display:flex;"> 
+            <div class="footer-logo-item"> 
+                <img src="/design/descarga4.webp" alt="Iata" title="Iata" class="footer-image-item">
+            </div> 
+            <div class="footer-logo-item"> 
+                <a href="http://www.jus.gov.ar/datos-personales.aspx/" target="_blank" rel="nofollow noopener"> 
                     <img src="/design/descarga3.webp" alt="Pdp" title="Pdp" class="footer-image-item"> 
-                    </a> 
-                </div> 
-                <div class="footer-logo-item"> 
-                    <a href="http://qr.afip.gob.ar/?qr=7ynzfbEsT3bJi2hL6MRo6w,," target="_blank" rel="nofollow noopener"> 
-                        <img src="/design/descarga.jpeg" alt="Data Fiscal" title="Data Fiscal" class="footer-image-item"> 
-                    </a> 
-                </div> 
-                <div class="footer-logo-item"> 
-                    <a href="http://servicios.turismo.gob.ar/agencias/constancia/legajo/10680" target="_blank" rel="nofollow noopener"> 
-                        <img src="/design/descarga2.jpeg" alt="Ministerio de Turismo" title="Ministerio de Turismo" class="footer-image-item"> 
-                    </a> 
-                </div> 
-            </div>
-            <p class="copyright"> &copy;Digital House 2022 | Powered and designed by Group 10 Desarrollo Full Stack </p>
-        </footer>
+                </a> 
+            </div> 
+            <div class="footer-logo-item"> 
+                <a href="http://qr.afip.gob.ar/?qr=7ynzfbEsT3bJi2hL6MRo6w,," target="_blank" rel="nofollow noopener"> 
+                    <img src="/design/descarga.jpeg" alt="Data Fiscal" title="Data Fiscal" class="footer-image-item"> 
+                </a> 
+            </div> 
+            <div class="footer-logo-item"> 
+                <a href="http://servicios.turismo.gob.ar/agencias/constancia/legajo/10680" target="_blank" rel="nofollow noopener"> 
+                    <img src="/design/descarga2.jpeg" alt="Ministerio de Turismo" title="Ministerio de Turismo" class="footer-image-item"> 
+                </a> 
+            </div> 
+        </div>
+        <p class="copyright"> &copy;Digital House 2022 | Powered and designed by Group 10 Desarrollo Full Stack </p>
+    </footer>
    
     
 </body>
