--- a/src/views/register.html
+++ b/src/views/register.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <title>Nos Vamos Volando</title>
+    <link rel= 'icon' type="image/x-icon" href="/design/android-chrome-192x192.png">
+    <meta name="keywords" content="viajes,vuelos,agencia,viaje,destinos,paquetes,turismo,avion,pasajes,vacaciones"/>
     <!-------vinculo hoja de estilo normalize-->
     <link rel="stylesheet" href="/css/normalize.css" />
     <!-- Iconos -->
@@ -33,7 +35,7 @@
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #37506C;">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img id="logo" src="/design/logo-nos-vamos-volando.png" width="60" height="60" alt="logo"/>
+              <img id="logo" src="/design/Logo_volando.png" width="50" height="50" alt="logo"/>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
