--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,10 +15,7 @@
     <!-------vinculo hoja de estilo normalize-->
     <link rel="stylesheet" href="/css/normalize.css" />
     <!-- Iconos -->
-    <script
-      src="https://kit.fontawesome.com/807c729568.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/807c729568.js" crossorigin="anonymous"></script>
     <!-------vinculo hoja de estilo css-->
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/index.css" />
