modificando el boton para el home

--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -34,7 +34,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #37506C;">
                 <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <img id="logo" src="/design/Logo_volando.png" width="50" height="50" alt="logo"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -116,7 +116,7 @@
             <p class="copyright"> &copy;Digital House 2022 | Powered and designed by Group 10 Desarrollo Full Stack </p>
         </footer>
 
-        <script>
+<!--         <script>
             const webLogo = document.querySelector('#logo')
             webLogo.addEventListener('click', () => {
                     if(window){
@@ -125,6 +125,6 @@
                         alert('Ocurrio un error al redirigir.')
                     }
             })
-        </script>
+        </script> -->
     </body>
 </html>
