--- a/src/views/session.html
+++ b/src/views/session.html
@@ -33,7 +33,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #37506C;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/">
             <img id="logo" src="/design/Logo_volando.png" width="50" height="50" alt="logo"/>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
