--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@
     --amarillo: #FEAF56;
     --coral: #FE5857;
     --logo: rgb(64,169,245);
-    --hooverbutton: rgb(12, 122, 201);
+    --hooverbutton:  #2b609c;
 }
 
 .nav-link,.nav-link.disabled {
