--- a/public/css/session.css
+++ b/public/css/session.css
@@ -9,6 +9,7 @@
 
 @import url(styles.css);
 
+
 h2 {
     text-align: center;
     margin: 20px 0 10px;
@@ -24,11 +25,15 @@ h2 {
 }
 
 button {
+    font-size: 14px;
     color: white;
+    border: 2px transparent solid;
     background-color: var(--logo);
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    border-radius: 50px;
+    justify-content: center;
+    width: 45%;
+    margin: 10px 20px 10px;
+    padding: 20px;
     transition-property: background-color;
     transition-duration: 450ms;
 }
@@ -36,4 +41,12 @@ button {
 button:hover{
     background-color: var(--hooverbutton);
 }
+
+/* input:invalid { 
+    border-color: red; 
+} 
+    
+input, input:valid { 
+    border-color: #ccc; 
+} */
 
