--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -1,1 +1,146 @@
 @import url(styles.css);
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+body {
+	background: #ebebeb;
+	font-family: montserrat;
+}
+.car-body {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+.car-body h1 {
+	padding: 20px 0;
+	text-align: center;
+	text-transform: uppercase;
+}
+.project {
+	display: flex;
+}
+.compras {
+	flex: 75%;
+	
+}
+.opcion-viaje {
+	display: flex;
+	width: 100%;
+	height: 200px;
+	overflow: hidden;
+	margin-bottom: 20px;
+	background: #fff;
+	transition: all .6s ease;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	border-radius: 10px;
+}
+.opcion-viaje:hover {
+	border: none;
+	transform: scale(1.01);
+}
+.opcion-viaje img {
+	width: 300px;
+	height: 200px;
+	object-fit: cover;
+}
+.info-viaje {
+	padding: 20px;
+	width: 100%;
+	position: relative;
+}
+.info-viaje h3 {
+	margin-bottom: 30px;
+}
+.info-viaje h4 {
+	margin-bottom: 50px;
+}
+.boton {
+	position: absolute;
+	bottom: 20px;
+	right: 20px;
+	padding: 10px 25px;
+	background-color: #3a71a9;
+	color: white;
+	cursor: pointer;
+	border-radius: 5px;
+}
+.boton:hover {
+	background-color: #76bfb6;
+	color: #fff;
+	font-weight: 600;
+}
+.viajeros input {
+	width: 40px;
+	padding: 5px;
+	text-align: center;
+}
+.boton i {
+	margin-right: 5px;
+}
+.right-section {
+	flex: 25%;
+	margin-left: 20px;
+	padding: 20px;
+	height: 400px;
+	border-radius: 5px;
+	background: #fff;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.right-section hr {
+	margin-bottom: 25px;
+}
+.right-section p {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 30px;
+	font-size: 20px;
+}
+.right-section a {
+	background-color: #76bfb6;
+	color: #fff;
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	height: 40px;
+	line-height: 40px;
+	font-weight: 900;
+}
+.right-section i {
+	margin-right: 15px;
+}
+.right-section a:hover {
+	background-color: #3972a7;
+}
+@media screen and (max-width: 700px) {
+	.content h3 {
+		margin-bottom: 15px;
+	}
+	.content h4 {
+		margin-bottom: 20px;
+	}
+	.btn2 {
+		display: none;
+	}
+	.opcion-viaje {
+		height: 150px;
+	}
+	.opcion-viaje img {
+		height: 150px;
+		width: 200px;
+	}
+}
+@media screen and (max-width: 900px) {
+	.project {
+		flex-direction: column;
+	}
+	.right-section {
+		margin-left: 0;
+		margin-bottom: 20px;
+	}
+}
+@media screen and (max-width: 1250px) {
+	.car-body {
+		max-width: 95%;
+	}
+}
