--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -114,7 +114,7 @@
         <div class="project">
           <div class="compras">
             <div class="opcion-viaje">
-              <img src="/images/villa-carlos-paz.jpg" />
+              <img src="./img/villa-carlos-paz.jpg" />
               <div class="info-viaje">
                 <h3>Villa Carlos Paz</h3>
                 <h4>Valor Paquete $6700</h4>
@@ -128,7 +128,7 @@
               </div>
             </div>
             <div class="opcion-viaje">
-              <img src="/images/cataratas.jpg" />
+              <img src="./img/cataratas.jpg" />
               <div class="info-viaje">
                 <h3>Cataratas del Iguazu</h3>
                 <h4>Valor Paquete $8900</h4>
@@ -142,7 +142,7 @@
               </div>
             </div>
             <div class="opcion-viaje">
-              <img src="/images/mardel.jpg" />
+              <img src="./img/mardel.jpg" />
               <div class="info-viaje">
                 <h3>Mar del Plata</h3>
                 <h4>Valor Paquete $6700</h4>
