--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,14 +15,13 @@
     <link rel="stylesheet" href="/css/normalize.css" />
     <!-- Iconos -->
     <script src="https://kit.fontawesome.com/807c729568.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <!-------vinculo hoja de estilo css-->
     <link rel="stylesheet" href="/css/index.css" />
     <!------fuente Poppins google fonts------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;1,100;1,200;1,400&family=Poppins:wght@200;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet">
-    <!-------icono----------------->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -53,7 +52,11 @@
                 </li>
                 <li class="nav-item">
                     <i class="fas fa-headphones-alt"></i>
-                    <a class="nav-link disabled">Para Ventas <strong>0810 888 810</strong></a>
+                    <a class="nav-link headphones" href="tel:0810 888 810">Para Ventas <strong>0810 888 810</strong></a>
+                </li>
+                <li class="nav-item carrito" style="display:flex";>
+                    <i class="fas fa-shopping-cart"></i>
+                    <a class="nav-link" href="productCart.html" style="position:absolute"; ></a>
                 </li>
             </ul>
             <form role="search">
@@ -90,7 +93,7 @@
             <div class="nombres-precios">
               <h3 class="nombres">Villa Carlos Paz</h3>
               <h2 class="precios">$6700</h2>
-              <h4 class="tarifa">Tarifa por una persona</h4>
+              <h4 class="tarifa">Tarifa por persona</h4>
             </div>
           </section>
       </article>
@@ -105,7 +108,7 @@
             <div class="nombres-precios">
               <h3 class="nombres">Capilla del Monte</h3>
               <h2 class="precios">$6700</h2>
-              <h4 class="tarifa">Tarifa por una persona</h4>
+              <h4 class="tarifa">Tarifa por persona</h4>
             </div>
           </section>
       </article>
@@ -120,7 +123,7 @@
             <div class="nombres-precios">
               <h3 class="nombres">San Carlos Bariloche</h3>
               <h2 class="precios">$8900</h2>
-              <h4 class="tarifa">Tarifa por una persona</h4>
+              <h4 class="tarifa">Tarifa por persona</h4>
             </div>
           </section>
       </article>
@@ -135,7 +138,7 @@
           <div class="nombres-precios">
             <h3 class="nombres">Cataratas del Iguazu</h3>
             <h2 class="precios">$8900</h2>
-            <h4 class="tarifa">Tarifa por una persona</h4>
+            <h4 class="tarifa">Tarifa por persona</h4>
           </div>
         </section>
     </article>
@@ -164,7 +167,7 @@
             <div class="nombres-precios">
               <h3 class="nombres">Mar del plata</h3>
               <h2 class="precios">$6700</h2>
-              <h4 class="tarifa">Tarifa por una persona</h4>
+              <h4 class="tarifa">Tarifa por persona</h4>
             </div>
           </section>
       </article>
@@ -179,7 +182,7 @@
             <div class="nombres-precios">
               <h3 class="nombres">Mendoza</h3>
               <h2 class="precios">$6700</h2>
-              <h4 class="tarifa">Tarifa por una persona</h4>
+              <h4 class="tarifa">Tarifa por persona</h4>
             </div>
           </section>
       </article>
@@ -194,7 +197,7 @@
             <div class="nombres-precios">
               <h3 class="nombres">Merlo</h3>
               <h2 class="precios">$8900</h2>
-              <h4 class="tarifa">Tarifa por una persona</h4>
+              <h4 class="tarifa">Tarifa por persona</h4>
             </div>
           </section>
       </article>
@@ -209,7 +212,7 @@
         <div class="nombres-precios">
           <h3 class="nombres">San Carlos Bariloche</h3>
           <h2 class="precios">$8900</h2>
-          <h4 class="tarifa">Tarifa por una persona</h4>
+          <h4 class="tarifa">Tarifa por persona</h4>
         </div>
       </section>
   </article>
