--- a/src/views/login.html
+++ b/src/views/login.html
@@ -56,7 +56,11 @@
                     </li>
                     <li class="nav-item">
                         <i class="fas fa-headphones-alt"></i>
-                        <a class="nav-link disabled">Para Ventas <strong>0810 888 810</strong></a>
+                        <a class="nav-link headphones" href="tel:0810 888 810">Para Ventas <strong>0810 888 810</strong></a>
+                    </li>
+                    <li class="nav-item carrito" style="display:flex";>
+                        <i class="fas fa-shopping-cart"></i>
+                        <a class="nav-link" href="productCart.html" style="position:absolute"; ></a>
                     </li>
                 </ul>
                 <form role="search">
