--- a/public/css/session.css
+++ b/public/css/session.css
@@ -26,7 +26,7 @@ h2 {
 
 button {
     font-size: 14px;
-    color: white;
+    color: var(--blanco);
     border: 2px transparent solid;
     background-color: var(--logo);
     border-radius: 50px;
