--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -23,51 +23,24 @@
     />
     <!-------vinculo hoja de estilo normalize-->
     <link rel="stylesheet" href="/css/normalize.css" />
-    <!-- Iconos -->
-    <script
-      src="https://kit.fontawesome.com/807c729568.js"
-      crossorigin="anonymous"
-    ></script>
+    <!--------- Iconos ------------>
+    <script src="https://kit.fontawesome.com/807c729568.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <!-------vinculo hoja de estilo css-->
     <link rel="stylesheet" href="/css/productCart.css" />
     <!------fuente Poppins google fonts------->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;1,100;1,200;1,400&family=Poppins:wght@200;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <!-------icono----------------->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;1,100;1,200;1,400&family=Poppins:wght@200;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet"/>
   </head>
   <body>
     <header>
-      <nav
-        class="navbar navbar-expand-lg navbar-light"
-        style="background-color: #37506c"
-      >
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #37506c">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-            <img
-              id="logo"
-              src="/design/Logo_volando.png"
-              width="50"
-              height="50"
-              alt="logo"
-            />
+            <img id="logo" src="/design/Logo_volando.png" width="50" height="50" alt="logo"/>
           </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarsExample04"
-            aria-controls="navbarsExample04"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarsExample04">
@@ -89,19 +62,15 @@
               </li>
               <li class="nav-item">
                 <i class="fas fa-headphones-alt"></i>
-                <a class="nav-link disabled"
-                  >Para Ventas <strong>0810 888 810</strong></a
-                >
-              </li>
+                <a class="nav-link headphones" href="tel:0810 888 810">Para Ventas <strong>0810 888 810</strong></a>
+            </li>
+              <li class="nav-item carrito" style="display:flex";>
+                <i class="fas fa-shopping-cart"></i>
+                <a class="nav-link" href="productCart.html" style="position:absolute"; ></a>
+            </li>
             </ul>
             <form role="search">
-              <input
-                class="form-control"
-                type="search"
-                placeholder="Encontrá tu destino"
-                aria-label="Search"
-                style="width: 20rem"
-              />
+              <input class="form-control" type="search" placeholder="Encontrá tu destino" aria-label="Search" style="width: 20rem"/>
             </form>
           </div>
         </div>
@@ -246,10 +215,7 @@
           </a>
         </div>
       </div>
-      <p class="copyright">
-        &copy;Digital House 2022 | Powered and designed by Group 10 Desarrollo
-        Full Stack
-      </p>
+      <p class="copyright"> &copy;Digital House 2022 | Powered and designed by Group 10 Desarrollo Full Stack</p>
     </footer>
 
     <!--         <script>
