--- a/src/views/register.html
+++ b/src/views/register.html
@@ -16,19 +16,15 @@
     <meta name="keywords" content="viajes,vuelos,agencia,viaje,destinos,paquetes,turismo,avion,pasajes,vacaciones"/>
     <!-------vinculo hoja de estilo normalize-->
     <link rel="stylesheet" href="/css/normalize.css" />
-    <!-- Iconos -->
-    <script
-      src="https://kit.fontawesome.com/807c729568.js"
-      crossorigin="anonymous"
-    ></script>
+    <!------------- Iconos -------------->
+    <script src="https://kit.fontawesome.com/807c729568.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <!-------vinculo hoja de estilo css-->
     <link rel="stylesheet" href="/css/register.css" />
     <!------fuente Poppins google fonts------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;1,100;1,200;1,400&family=Poppins:wght@200;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet">
-    <!-------icono----------------->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -58,9 +54,13 @@
                       <a class="nav-link" href="session.html">Iniciar Sesión</a>
                   </li>
                   <li class="nav-item">
-                      <i class="fas fa-headphones-alt"></i>
-                      <a class="nav-link disabled">Para Ventas <strong>0810 888 810</strong></a>
-                  </li>
+                    <i class="fas fa-headphones-alt"></i>
+                    <a class="nav-link headphones" href="tel:0810 888 810">Para Ventas <strong>0810 888 810</strong></a>
+                </li>
+                  <li class="nav-item carrito" style="display:flex";>
+                    <i class="fas fa-shopping-cart"></i>
+                    <a class="nav-link" href="productCart.html" style="position:absolute"; ></a>
+                </li>
               </ul>
               <form role="search">
                   <input class="form-control" type="search" placeholder="Encontrá tu destino" aria-label="Search" style="width:20rem">
