--- a/public/css/index.css
+++ b/public/css/index.css
@@ -34,6 +34,63 @@ main {
     margin: auto;
 }
 
+.img-navbar{
+    display: flex;
+}
+
+.contenedor{
+    position: absolute;
+    padding: 5px;
+    top: 70%;
+    left: 50%;
+}
+
+.contenedor input{
+width: 0px;
+height: 40px;
+padding: 0 20px;
+font-size: 18px;
+color: #000;
+outline: none;
+border: 1px solid;
+border-radius: 30px;
+transition: all 0.6s ease-in;
+}
+
+.btn{
+    position: absolute;
+    top: -5px;
+    right: 0px;
+    background: #49013f;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.6s ease-in;
+}
+
+.btn i{
+    position: relative;
+    top: -8px
+}
+
+.btn:hover{
+    transform: rotate(-360deg);
+}
+
+.contenedor:hover input{
+    width: 300px;
+}
+
+
+.contenedor input:focus{
+    width: 300px;
+}
+
 .destacados, .ofertas {
     display: flex;
     flex-wrap: wrap;
@@ -92,8 +149,7 @@ main {
 }
 
 .producto:hover .articulo i {
-transform: translateX(525%) translateY(-425%) /* rotate(360deg) */;
-right: 20px;
+
 }
 
 .nombres-precios {
@@ -127,7 +183,7 @@ right: 20px;
     }
 
     .producto:hover .articulo i {
-        transform: translateX(525%) translateY(-425%) /* rotate(360deg) */;
+        transform: translateX(525%) translateY(-425%);
         right: 20px;
         }
 }
@@ -139,7 +195,7 @@ right: 20px;
     }
 
     .producto:hover .articulo i {
-        transform: translateX(750%) translateY(-575%) /* rotate(360deg) */;
+        transform: translateX() translateY(-575%) /* rotate(360deg) */;
         right: 20px;
     }
 
