--- a/src/views/index.html
+++ b/src/views/index.html
@@ -56,12 +56,18 @@
                     <a class="nav-link disabled">Para Ventas <strong>0810 888 810</strong></a>
                 </li>
             </ul>
-            <form role="search">
+          <!--   <form role="search">
                 <input class="form-control" type="search" placeholder="Encontrá tu destino" aria-label="Search" style="width:20rem">
-            </form>
+            </form> -->
           </div>
         </div>
       </nav>
+      <div class = "contenedor">
+        <input type="text" placeholder="Encontra tu destino">
+          <div class = "btn">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+      </div>
         <img class="img-navbar" src="/design/jeshoots-com-mSESwdMZr-A-unsplash.jpg" alt="image-airport" width="100%" height="100%"/> 
     </header>
     <main>
